@@ -33,7 +33,7 @@ public:
 	//! Gets the full name of a file in the list including the path, based on an index.
 	/** \param index is the zero based index of the file which name should
 	be returned. The index must be less than the amount getFileCount() returns.
-	\return File name of the file. Returns 0, if an error occured. */
+	\return File name of the file. Returns 0 if an error occured. */
 	virtual const io::path& getFullFileName(u32 index) const = 0;
 
 	//! Returns the size of a file in the file list, based on an index.
@@ -41,6 +41,15 @@ public:
 	The index must be less than the amount getFileCount() returns.
 	\return The size of the file in bytes. */
 	virtual u32 getFileSize(u32 index) const = 0;
+
+	//! Returns the ID of a file in the file list, based on an index.
+	/** This optional ID can be used to link the file list entry to information held
+	elsewhere. For example this could be an index in an IFileArchive, linking the entry
+	to its data offset, uncompressed size and CRC.
+	\param index is the zero based index of the file which should be returned.
+	The index must be less than the amount getFileCount() returns.
+	\return The ID of the file. */
+	virtual u32 getID(u32 index) const = 0;
 
 	//! Check if the file is a directory
 	/** \param index The zero based index which will be checked. The index
@@ -58,6 +67,16 @@ public:
 
 	//! Returns the base path of the file list
 	virtual const io::path& getPath() const = 0;
+
+	//! Add as a file or folder to the list
+	/** \param fullPath The file name including path, from the root of the file list.
+	\param isDirectory True if this is a directory rather than a file.
+	\param size The size of the file in bytes.
+	\param id The ID of the file in the archive which owns it */
+	virtual u32 addItem(const io::path& fullPath, u32 size, bool isDirectory, u32 id=0) = 0;
+
+	//! Sorts the file list. You should call this after adding any items to the file list
+	virtual void sort() = 0;
 };
 
 } // end namespace irr
